# datAFLow

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
analysis-scripts/: build-angora.sh  ctimeout  remove_duplicate_lines.py
analysis-scripts/bintools/: common.py  get_libs.py  prelink_binary.py
evaluation/: README.ddfuzz.md  README.magma.md
evaluation/ddfuzz/: get_targets.sh
evaluation/ddfuzz-targets/mem-funcs/: bison.txt  faust.txt  pcre2.txt
evaluation/ddfuzz/mem-funcs/: mir.txt  qbe.txt
evaluation/ddfuzz/seeds/bison/: hello.y
evaluation/ddfuzz/seeds/pcre2/: id:000000,time:0,orig:seed
evaluation/magma/: magma.patch
ext/: CMakeLists.txt
include/fuzzalloc/: Metadata.h  Streams.h  baggy_bounds.h  fuzzalloc.h
include/fuzzalloc/Analysis/: CollectStats.h  DefSiteIdentify.h  DefUseChain.h  MemFuncIdentify.h  UseSiteIdentify.h  VariableRecovery.h
include/fuzzalloc/Runtime/: BaggyBounds.h  Hash.h
include/fuzzalloc/Transforms/: Utils.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  CollectStats.cpp  DefSiteIdentify.cpp  DefUseChain.cpp  MemFuncIdentify.cpp  UseSiteIdentify.cpp  VariableRecovery.cpp
lib/Common/: BaggyBounds.c  Metadata.c
lib/Runtime/: BaggyBounds.c  BaggyBoundsMemAlloc.c  CMakeLists.txt  Debug.cpp  Hash.c  LLVMCov.c  PAMD.c  PAMD.cpp  Tracer.cpp
lib/Transforms/: CMakeLists.txt  Heapify.cpp
lib/Transforms/Instrumentation/: AFLUseSite.cpp  AFLUseSiteInstrument.cpp  CMakeLists.txt  DebugUseSite.cpp  GlobalVariableTag.cpp  HeapTag.cpp  LocalVariableTag.cpp  MemFuncInstrument.cpp  MemFuncTag.cpp  TagUtils.cpp  TagUtils.h  TracerUseSite.cpp  TracerUtils.cpp  TracerUtils.h  UseSite.cpp  Utils.cpp  Utils.h  VariableTag.cpp  VariableTag.h
lib/Transforms/Utils/: CMakeLists.txt  LowerAtomic.cpp  LowerAtomics.cpp  LowerConstantExpr.cpp  LowerConstantExprs.cpp  LowerDbgDeclare.cpp  LowerDebugDeclare.cpp  LowerMemIntrinsic.cpp  LowerMemIntrinsics.cpp  LowerNewDelete.cpp  Mem2Reg.cpp  StripLifetime.cpp
llvm-scripts/: get_llvm_src.sh  update_clang_src.sh  update_compiler_rt_src.sh  update_llvm_src.sh
patches/: afl-bitmap.patch  magma.patch
src/: CMakeLists.txt
src/clang-files/include/clang/Basic/: CodeGenOptions.def
src/clang-files/include/clang/Driver/: Options.td
src/clang-files/lib/CodeGen/: CGExprConstant.cpp
src/clang-files/lib/Frontend/: CompilerInvocation.cpp
src/compiler-rt-files/lib/asan/: CMakeLists.txt  asan_allocator.cpp  asan_allocator.h  asan_interceptors.cpp  asan_malloc_linux.cpp  asan_mapping.h
src/compiler-rt-files/lib/asan/tests/: CMakeLists.txt
src/compiler-rt-files/lib/sanitizer_common/: sanitizer_allocator.h  sanitizer_fuzzalloc_allocator.h
src/compiler-rt-files/test/asan/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
src/include/fuzzalloc/: fuzzalloc.h
src/include/fuzzalloc/Analysis/: CollectStats.h  VariableRecovery.h
src/llvm-files/: CMakeLists.txt
src/llvm-files/include/Analysis/: VariableRecovery.h
src/llvm-files/include/Support/: FuzzallocUtils.h
src/llvm-files/lib/: CMakeLists.txt
src/llvm-files/lib/Analysis/: CMakeLists.txt  CollectStats.cpp  CollectTagSites.cpp  VariableRecovery.cpp
src/llvm-files/lib/Analysis/CollectStats/: CMakeLists.txt  CollectStats.cpp
src/llvm-files/lib/Analysis/CollectTagSites/: CMakeLists.txt  CollectTagSites.cpp
src/llvm-files/lib/Support/: CMakeLists.txt  FuzzallocUtils.cpp
src/llvm-files/lib/Transforms/: CMakeLists.txt
src/llvm-files/lib/Transforms/Heapification/: CMakeLists.txt  ExpandGVInitializers.cpp  HeapifyAllocas.cpp  HeapifyGlobalVariables.cpp  HeapifyUtils.cpp  HeapifyUtils.h
src/llvm-files/lib/Transforms/HeapifyObjects/: ExpandGVInitializers.cpp  HeapifyAllocas.cpp  HeapifyGlobalVariables.cpp  HeapifyUtils.cpp  HeapifyUtils.h
src/llvm-files/lib/Transforms/InstrumentMemAccesses/: CMakeLists.txt  InstrumentMemAccesses.cpp
src/llvm-files/lib/Transforms/Instrumentation/: AddressSanitizer.cpp  CMakeLists.txt
src/llvm-files/lib/Transforms/LowerAtomics/: CMakeLists.txt  LowerAtomics.cpp
src/llvm-files/lib/Transforms/LowerMemIntrinsics/: CMakeLists.txt  LowerMemIntrinsics.cpp
src/llvm-files/lib/Transforms/RewriteNews/: CMakeLists.txt  RewriteNews.cpp
src/llvm-files/lib/Transforms/TagDynamicAllocs/: CMakeLists.txt  TagDynamicAllocs.cpp
src/llvm-files/lib/Utils/: FuzzallocUtils.cpp  FuzzallocUtils.h
src/runtime/: CMakeLists.txt
src/runtime/malloc/: CMakeLists.txt  debug.c  debug.h  malloc.c  malloc_internal.h  mem_access.c
src/runtime/ptmalloc3/: CMakeLists.txt
src/tools/: CMakeLists.txt  Config.h.in  ExtAPI.json  common.c  common.h  dataflow-cc.c  dataflow-pp.c  dataflow-preprocess.c  dataflow-sa.cpp  dataflow-stats.c  dataflow-stats.cpp
tools/: CMakeLists.txt  CovJSONCommon.cpp  CovJSONCommon.h  bootstrap-cov.py  dataflow-c++.py.in  dataflow-c++.sh.in  dataflow-cc.py.in  dataflow-cc.sh.in  dataflow-sa.cpp  dataflow-stats.cpp  ddg-ratio.py  dua-cov-json.cpp  dua-subsumption.cpp  inst-stats.cpp  llvm-cov-json.cpp  static-def-use-chains.cpp  static-dua.cpp  static-llvm-cov.cpp  timestamp-angora-queue.py
